--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Okane Navi</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="app_name">オカネナビ</string>
+    <string name="tab_text_1">支出</string>
+    <string name="tab_text_2">収入</string>
 </resources>
