Revise subject of Credit/Debit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,21 @@
     <string name="cw_24_image">右に回転</string>
 
     <string-array name="subjects">
-        <item>費用</item>
+<!--        <item>費用</item>
         <item>収益</item>
         <item>資産</item>
         <item>負債</item>
-        <item>純資産</item>
+        <item>純資産</item>-->
+        <item>食費>自炊</item>
+        <item>食費>外食</item>
+        <item>日用品>生活用品</item>
+        <item>日用品>備品</item>
+        <item>税金>消費税</item>
+        <item>現金>財布</item>
+        <item>電子マネー>PayPay</item>
+        <item>銀行>みずほ</item>
+        <item>クレカ>三井住友</item>
+        <item>給料>固定給</item>
+        <item>給料>残業代</item>
     </string-array>
 </resources>
